# application/app/Http/Controllers/Setup/DesaController.php
@@ -210,4 +210,36 @@ class DesaController extends Controller
 
         return $this->success("Desa berhasil diupdate");
     }
+
+    /**
+     * Show Ref Setup Desa
+     *
+     * @OA\Get(
+     *     path="/api/ref/desa",
+     *     tags={"references"},
+     *     operationId="ref/desa",
+     *     @OA\Response(
+     *         response=400,
+     *         description="Bad Request"
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Unauthorized"
+     *     ),
+     *     security={
+     *         {"api_key": {"write:user", "read:user"}}
+     *     },
+     *   ),
+     */
+
+    public function getRef()
+    {
+        $result = [];
+        try {
+            $result =  $this->desaService->getRef();
+        } catch (Exception $e) {
+            $this->handleErrorRequest($e->getMessage());
+        }
+        return $this->data($result);
+    }
 }
